Prepare safe ranking learning infrastructure
